truly centered start button

--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@
 
   /* Position Styles */
   position: absolute;
-  right: 50%;
+  left: 50%;
   bottom: 5%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 
   /* Font Styles */
   color: black;
