--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-#topLeftStim {
+#jspsych-html-button-response-button-0, #topLeftStim {
 
   /* Position Styles */  
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
 
 }
 
-#topRightStim {
+#jspsych-html-button-response-button-1, #topRightStim {
 
   /* Position Styles */  
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
 
@@ -25,7 +25,7 @@
 #buttonStyle {
 
   /* Position Styles */
-  position: absolute;
+  position: fixed;
   left: 50%;
   bottom: 5%;
   margin-right: -50%;
