--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+.instructionsPara {
+  color: black;
+  text-align: center;
+  font-style: normal;
+  font-size: 32px;
+  font-family: "Times New Roman";
+}
+
+#instructPage1 {
+  color: black;
+  text-align: center;
+  font-style: normal;
+  font-size: 24px;
+  font-family: "Times New Roman";
+}
+
 #jspsych-html-button-response-button-0, #topLeftStim {
 
   /* Position Styles */  
