--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 }
 
 /* This style applies only to the instructions page X */
-
 #instructPage1 {
   color: black;
   text-align: center;
@@ -113,7 +112,7 @@
 }
 
 #farewellLink {
-  color: black;
+  color: blue;
   text-align: center;
   font-style: normal;
   font-size: 32px;
